# HealthPatch

./: .env   .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  docker-compose_test.yml  pyproject.toml  redis.conf
.github/workflows/: ci.yml
docs/: agile.md  estimation.md  project.md  requirements.md  team.md  techreq.md  use-cases.md
docs/analysis/: lab2.md  lab3.md  lab4.md  lab5.md
migrations/: env.py
migrations/versions/: 0bfc85f1c349_add_fields_for_fdc_data.py  1fa4ca704d4f_add_new_fields_to_userprofile.py  55d0004f4f4c_add_refresh_token_table.py  62a123a993d4_add_gamificationprofile.py  7f9cb4b13d2c_remove_rpg_stats_for_time.py  9f5264b10694_use_mixin_for_tokens.py  a8a162f13084_add_oauth_field_to_user.py  c4a1b2d3e5f6_add_plan_training_personal_record.py  ddfb4fa1d0ea_initial_schema.py  e7aaf17b7cbd_make_password_not_required_and_add_.py  e8e70c349a61_add_name_to_user.py
src/activity/application/: audit_service.py  commands.py  dto.py  event_handlers.py  interfaces.py  queries.py  read_models.py
src/activity/application/handlers/: add_exercise_to_session.py  add_exercise_to_training.py  add_training.py  create_exercise.py  create_muscle_group.py  create_workout_plan.py  delete_personal_record.py  delete_training.py  delete_training_exercise.py  delete_workout_plan.py  end_session.py  get_exercise.py  get_plan_detail.py  get_session_detail.py  list_exercises.py  list_muscle_groups.py  list_my_plans.py  list_personal_records.py  list_public_plans.py  list_user_sessions.py  log_set.py  start_session.py  update_workout_plan.py  upsert_personal_record.py
src/activity/application/use_cases/: exercise_catalog.py  personal_record.py  workout_plan.py  workout_session.py
src/activity/domain/: events.py  factory.py  interfaces.py  models.py
src/activity/infrastructure/: audit_service.py  mapper.py  read_repository.py  repositories.py  unit_of_work.py
src/activity/presentation/: dependencies.py  error_mapper.py  response_builders.py  routes.py  schemas.py
src/analytics_context/audit/acl/: translators.py
src/analytics_context/audit/application/: handlers.py  queries.py
src/analytics_context/audit/domain/: interfaces.py  models.py
src/analytics_context/audit/infrastructure/: orm.py  repository.py
src/analytics_context/audit/presentation/: dependencies.py  routes.py  schemas.py
src/analytics_context/projections/activity_history/: handlers.py  orm.py
src/auth/application/: commands.py  dto.py  event_handlers.py  queries.py  read_models.py  token_utils.py
src/auth/application/handlers/: change_password.py  get_me.py  login.py  logout.py  oauth.py  refresh_token.py  register.py  reset_password.py  two_factor.py  verify_email.py
src/auth/application/providers/: dto.py  facebook_provider.py  github_provider.py  google_provider.py
src/auth/application/use_cases/: change_password.py  login.py  logout.py  oauth.py  refresh_token.py  register.py  reset_password.py  two_factor.py  verify_email.py
src/auth/domain/: errors.py  events.py  factory.py  interfaces.py  models.py
src/auth/infrastructure/: audit_service.py  mapper.py  oauth_state_repository.py  repositories.py  token_cleaner.py
src/auth/presentation/: dependencies.py  error_mapper.py  oauth_routes.py  routes.py  schemas.py
src/core/: base.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py  redis.py
src/core/tasks/: auth_tasks.py  scheduler.py
src/gamification/application/: event_handlers.py  queries.py
src/gamification/domain/: interfaces.py  leveling.py  value_objects.py  xp_calculator.py
src/gamification/infrastructure/: repositories.py  unit_of_work.py
src/gamification/presentation/: dependencies.py  routers.py  schemas.py
src/middleware/: rate_limit.py
src/models/: __init__.py  activity.py  gamification.py  models.py  nutrition.py  social.py  user.py
src/nutrition/application/: commands.py  dto.py  event_handlers.py  queries.py  use_cases.py
src/nutrition/domain/: errors.py  events.py  factory.py  interfaces.py  models.py  xp_calculator.py
src/nutrition/infrastructure/: audit_service.py  mapper.py  read_repository.py  repositories.py
src/nutrition/presentation/: dependencies.py  error_mapper.py  routers.py  schemas.py
src/repositories/: activity.py  activity_uow.py  base_uow.py  cache.py  nutrition.py  nutrition_uow.py  oauth_state.py  profile.py  rate_limit.py  redis_base.py  refresh_token.py  social.py  user.py
src/routes/: activity.py  auth.py  dependencies.py  nutrition.py  oauth.py  profile.py  social.py
src/schemas/: activity.py  auth.py  oauth.py  profile.py  social.py
src/scripts/: load_fdc_data.py
src/services/: activity.py  auth.py  mail.py  nutrition.py  nutrition_calculators.py  oauth.py  profile.py  social.py  totp.py
src/shared/application/: dispatcher.py
src/shared/contracts/: __init__.py  integration_event.py  ports.py  request_envelope.py
src/shared/infrastructure/: base_uow.py  daily_claim_store.py  event_bus.py  event_bus_interface.py  event_notification_handlers.py  hybrid_event_bus.py  in_memory_event_bus.py  logging_notify_service.py  mail.py  notify_service.py  rate_limit.py  redis_base.py  redis_event_bus.py
src/shared/schemas/: rate_limit.py
src/templates/: reset_password.html  verify_email.html
src/user/application/: commands.py  dto.py  interfaces.py  queries.py  read_models.py  use_cases.py
src/user/domain/: errors.py  interfaces.py  models.py
src/user/infrastructure/: mapper.py  read_repository.py  repositories.py
src/user/presentation/: dependencies.py  routes.py  schemas.py
src/utils/: cache_decorator.py
src/workers/: main_worker.py
tests/: conftest.py
tests/integration/: test_activity.py  test_auth.py  test_gamification.py  test_module_boundaries.py  test_nutrition.py  test_nutrition_int.py  test_profile.py
tests/unit/: test_activity.py  test_activity_event_handlers.py  test_audit_service.py  test_auth.py  test_gamification.py  test_nutrition.py  test_nutrition_unit.py  test_profile.py
(+163 files in other folders)
