[project]
name = "health-patch"
version = "0.1.0"
description = "RPG-style fitness tracker with AI coach"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "argon2-cffi>=25.1.0",
    "fastapi-mail>=1.6.2",
    "apscheduler>=3.11.2",
    "jinja2>=3.1.6",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "redis[hiredis]>=7.4.0",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env_files = [".env.test"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.5",
]
