[project]
name = "health-patch"
version = "0.1.0"
description = "RPG-style fitness tracker with AI coach"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "argon2-cffi>=25.1.0",
    "fastapi-mail>=1.6.2",
    "apscheduler>=3.11.2",
    "jinja2>=3.1.6",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "redis[hiredis]>=7.4.0",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "arq>=0.25.0",
]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env_files = [".env.test"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "httpx>=0.28.1",
    "import-linter>=2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.5",
]

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "auth must not import other modules' private layers"
type = "forbidden"
source_modules = ["src.core_context.auth"]
forbidden_modules = [
    "src.core_context.user.domain", "src.core_context.user.application", "src.core_context.user.infrastructure", "src.core_context.user.presentation",
    "src.core_context.activity.domain", "src.core_context.activity.application", "src.core_context.activity.infrastructure", "src.core_context.activity.presentation",
    "src.core_context.nutrition.domain", "src.core_context.nutrition.application", "src.core_context.nutrition.infrastructure", "src.core_context.nutrition.presentation",
    "src.core_context.gamification.domain", "src.core_context.gamification.application", "src.core_context.gamification.infrastructure", "src.core_context.gamification.presentation",
]

[[tool.importlinter.contracts]]
name = "user must not import other modules' private layers"
type = "forbidden"
source_modules = ["src.core_context.user"]
forbidden_modules = [
    "src.core_context.auth.domain", "src.core_context.auth.application", "src.core_context.auth.infrastructure", "src.core_context.auth.presentation",
    "src.core_context.activity.domain", "src.core_context.activity.application", "src.core_context.activity.infrastructure", "src.core_context.activity.presentation",
    "src.core_context.nutrition.domain", "src.core_context.nutrition.application", "src.core_context.nutrition.infrastructure", "src.core_context.nutrition.presentation",
    "src.core_context.gamification.domain", "src.core_context.gamification.application", "src.core_context.gamification.infrastructure", "src.core_context.gamification.presentation",
]

[[tool.importlinter.contracts]]
name = "activity must not import other modules' private layers"
type = "forbidden"
source_modules = ["src.core_context.activity"]
forbidden_modules = [
    "src.core_context.auth.domain", "src.core_context.auth.application", "src.core_context.auth.infrastructure", "src.core_context.auth.presentation",
    "src.core_context.user.domain", "src.core_context.user.application", "src.core_context.user.infrastructure", "src.core_context.user.presentation",
    "src.core_context.nutrition.domain", "src.core_context.nutrition.application", "src.core_context.nutrition.infrastructure", "src.core_context.nutrition.presentation",
    "src.core_context.gamification.domain", "src.core_context.gamification.application", "src.core_context.gamification.infrastructure", "src.core_context.gamification.presentation",
]

[[tool.importlinter.contracts]]
name = "nutrition must not import other modules' private layers"
type = "forbidden"
source_modules = ["src.core_context.nutrition"]
forbidden_modules = [
    "src.core_context.auth.domain", "src.core_context.auth.application", "src.core_context.auth.infrastructure", "src.core_context.auth.presentation",
    "src.core_context.user.domain", "src.core_context.user.application", "src.core_context.user.infrastructure", "src.core_context.user.presentation",
    "src.core_context.activity.domain", "src.core_context.activity.application", "src.core_context.activity.infrastructure", "src.core_context.activity.presentation",
    "src.core_context.gamification.domain", "src.core_context.gamification.application", "src.core_context.gamification.infrastructure", "src.core_context.gamification.presentation",
]

[[tool.importlinter.contracts]]
name = "gamification must not import other modules' private layers"
type = "forbidden"
source_modules = ["src.core_context.gamification"]
forbidden_modules = [
    "src.core_context.auth.domain", "src.core_context.auth.application", "src.core_context.auth.infrastructure", "src.core_context.auth.presentation",
    "src.core_context.user.domain", "src.core_context.user.application", "src.core_context.user.infrastructure", "src.core_context.user.presentation",
    "src.core_context.activity.domain", "src.core_context.activity.application", "src.core_context.activity.infrastructure", "src.core_context.activity.presentation",
    "src.core_context.nutrition.domain", "src.core_context.nutrition.application", "src.core_context.nutrition.infrastructure", "src.core_context.nutrition.presentation",
]

[[tool.importlinter.contracts]]
name = "Core may not import Analytics"
type = "forbidden"
source_modules = ["src.core_context"]
forbidden_modules = ["src.analytics_context"]
